<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zxy.tracee.ui.DiaryDetailActivity"
    tools:showIn="@layout/activity_diary_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:background="@drawable/text_view_background"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/dot"
                android:textColor="#81c784" />

            <TextView
                android:id="@+id/diary_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Roboto"
                android:text="@string/default_diary_title"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:background="@drawable/text_view_background"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/dot"
                android:textColor="#81c784" />

            <TextView
                android:id="@+id/diary_content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_diary_content"
                android:textSize="18dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"

            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/location_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location_on_black_24dp"
                    />
                <TextView
                    android:textColor="@color/url_blue"
                    android:id="@+id/location_inf"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/location_hint"
                    android:paddingLeft="7dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/date_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_history_black_24dp"
                    />
                <TextView
                    android:id="@+id/date_info"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="Apr 18"
                    android:paddingLeft="7dp"/>
            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/image_detail_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</RelativeLayout>
