<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zxy.tracee.ui.AddDiaryActivity"
    tools:showIn="@layout/activity_add_diary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/diary_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:hintTextAppearance="@style/TextAppearance.FloatLabelHint">

            <AutoCompleteTextView
                android:id="@+id/add_diary_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/diary_title_hint"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textColorHighlight="@color/colorPrimary" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/diary_content_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:hintTextAppearance="@style/TextAppearance.FloatLabelHint">

            <AutoCompleteTextView
                android:id="@+id/add_diary_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/diary_content_hint"
                android:inputType="textMultiLine"
                android:maxLines="6"
                android:minLines="2"
                android:selectAllOnFocus="true"
                android:textColorHighlight="@color/colorPrimary" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/gallery_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/no_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/no_image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remand_add_image"
                android:textAlignment="center"
                android:textColor="#9e9e9e"
                android:textSize="15dp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/select_photos_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

    </LinearLayout>


</RelativeLayout>
